Add support for user identities